--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@solid-primitives/i18n": "^2.1.0",
     "@solid-primitives/map": "^0.4.11",
     "@solid-primitives/scheduled": "^1.4.3",
+    "@solid-primitives/storage": "^2.1.4",
     "@solidjs/router": "^0.12.5",
     "dayjs": "^1.11.10",
     "openapi-fetch": "^0.9.3",
